# issai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: manual_tests.txt  requirement_specification.odt  tcms_api_data_types.txt  use_cases.odt  user_manual_en.odt
src/issai/: issai_export.sh  issai_gui.sh  issai_import.sh  issai_run.sh
src/issai/cli/: common.py  issai_cli.py  issai_export.py  issai_import.py  issai_run.py
src/issai/core/: __init__.py  attachments.py  builtin_runners.py  checks.py  config.py  entities.py  exporter.py  importer.py  issai_entities.py  issai_exception.py  messages.py  messages_de.txt  messages_en.txt  resourcemanager.py  results.py  runner.py  status.py  task.py  tcms.py  util.py
src/issai/gui/: configeditor.py  dialogs.py  issai_gui.py  mainwindow.py  panes.py  settings.py  tomleditor.py  workers.py
templates/: master.toml  product.toml
tests/cli/: __init__.py  test_common.py
tests/core/: test_builtin_runners.py  test_config.py  test_entities_masterdata.py  test_issai_entities.py  test_messages.py  test_resourcemanager.py  test_results.py  test_status.py  test_test.py  test_util.py
tests/scripts/: check_message_codes.py
tests/server/: dataset.py  tcmsserver.py
tests/testdata/config/: unittest_master.toml  unittest_product.toml
tests/testdata/dataset/: SimpleIssai.old.toml  SimpleIssai.toml  cli_test.toml  default.toml
tests/testdata/entities/: default_import.txt
tests/testdata/input/plan/: multi_build_testplan_1.toml  multi_version_testplan_1.toml  testplan_1.toml
(+28 files in other folders)
