# to build issai with all features
[project]
name = "issai"
dynamic = ["version"]
authors = [
    {name="Frank Sommer", email="Frank.Sommer@sherpa-software.de"}
]
maintainers = [
    {name="Frank Sommer", email="Frank.Sommer@sherpa-software.de"}
]
description = "Import, export and run tests managed by KiwiTCMS"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "certifi",
  "chardet",
  "idna",
  "requests",
  "tcms-api",
  "tomlkit",
  "urllib3",
  "PySide6"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.gui-scripts]
issai_gui = "issai.gui.issai_gui:gui_main"

[project.scripts]
issai_export = "issai.cli.issai_cli:export_main"
issai_import = "issai.cli.issai_cli:import_main"
issai_run = "issai.cli.issai_cli:run_main"

[project.urls]
Homepage = "https://github.com/frsommer64/issai"
Issues = "https://github.com/frsommer64/issai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv",
  "/.git"
]

[tool.hatch.build.targets.wheel]
packages = ["src/issai"]

[tool.hatch.version]
path = "src/issai/core/__init__.py"
